# ImageProcessingPipe

./: CMakeCache.txt  CMakeLists.txt  Dockerfile  ImgProcessingPipe  Makefile  README.md  cmake_install.cmake
include/: ProcessImage.h
src/: ProcessImage.cpp  main.cpp
